# wanamaker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  fix_benchmark.py  fix_trust_card_and_ramp.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  install.yml  network_isolation.yml
benchmark_data/: collinearity.csv  collinearity_metadata.json  generate_diagnostic_benchmarks.py  generate_phase1_benchmarks.py  generate_synthetic_ground_truth.py  lift_test_calibration.csv  lift_test_calibration_lift_tests.csv  lift_test_calibration_metadata.json  low_variation_channel.csv  low_variation_channel_metadata.json  public_example.csv  public_example.yaml  refresh_stability_4_weeks_added.csv  refresh_stability_base.csv  refresh_stability_metadata.json  structural_break.csv  structural_break_metadata.json  synthetic_ground_truth.csv  synthetic_ground_truth.json  synthetic_ground_truth_ground_truth.json  target_leakage.csv  target_leakage_metadata.json
docs/: analyst_guide.md  api_reference.md  architecture.md  cmo_guide.md  comparison.md  feedback.md  index.md  installation.md  privacy.md  quickstart.md  risk_adjusted_allocation.md  verification.md  wanamaker_brd_prd.md
docs/archive/: feedback.md  review_20260502a.md
docs/decisions/: 0001-bayesian-engine-selection.md
docs/examples/: index.md  lift_test_changes_verdict.md  refresh_after_noisy_quarter.md  tv_to_ctv.md
docs/guides/: analyst_guide.md  cmo_guide.md  comparison.md
docs/internal/: architecture.md  risk_adjusted_allocation.md  wanamaker_brd_prd.md
docs/references/: adstock_and_saturation.md  risk_adjusted_allocation_math.md
notebooks/: quickstart.ipynb
src/wanamaker/: __init__.py  artifacts.py  cli.py  config.py  seeding.py
tests/: test_network_isolation.py  test_no_network_in_core.py  test_pymc_posterior_predictive.py  test_reproducibility.py
tests/benchmarks/: test_calibration_behavior.py  test_candidate_generation_safety.py  test_loaders.py  test_refresh_stability.py  test_synthetic_recovery.py
tests/unit/: test_adstock.py  test_advisor_channel_flagging.py  test_anchor.py  test_artifact_schemas.py  test_benchmark_loaders.py  test_calibration_comparison.py  test_charts.py  test_cli.py  test_cli_forecast.py  test_cli_readiness.py  test_cli_recommend_ramp.py  test_cli_refresh.py  test_cli_report.py  test_cli_run_example.py  test_cli_suggest_scenarios.py  test_compare_scenarios.py  test_diagnose_command.py  test_diagnose_core_checks.py  test_diagnose_spend_aware_checks.py  test_diagnostic_benchmarks.py  test_excel_export.py  test_fit_command.py  test_forecast_posterior_predictive.py  test_lift_test_calibration.py  test_model_spec.py  test_priors.py  test_ramp.py  (+14 more)
(+55 files in other folders)
